Fixed Activity Formatting

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .header-holder {
 	margin-top: 17px !important;
-	//margin-bottom: 275px !important;
+	//height: 97vh;
 }
 
 .header-hello-large-text {
