--- a/style.css
+++ b/style.css
@@ -78,12 +78,12 @@
 }
 
 .footer-background {
-	background: #2d49a2 !important;
+	background: #ecf0f1 !important;
 }
 
 .footer-text {
 	font-size: 1.2rem !important;
-	color: white !important;
+	color: black !important;
 }
 
 @media only screen and (max-width: 500px) {
