--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 	margin-top: 75px !important;
 	margin-bottom: 0px !important;
 	font-size: 11.5rem;
+	letter-spacing: 3px;
 }
 
 .header-name-large-text {
@@ -44,7 +45,7 @@
 }
 
 .bio-text {
-	font-size: 1.75rem;
+	font-size: 1.65rem;
 }
 
 @media only screen and (max-width: 500px) {
