--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 	font-size: 3rem;
 }
 
+.alt-footer-color {
+	background-color: #cbd2dc !important;
+}
+
 .project-header {
 	font-size: 3rem !important;
 }
