--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,8 @@ a:hover {
 
 .bio-text {
 	font-size: 2.15rem;
+	font-weight: 400;
+	text-align: justify;
 }
 
 @media only screen and (max-width: 500px) {
